# libsodium-cmake

./: .gitignore  CMakeLists.txt  GenerateCMake.ps1  LICENSE  README.md
CMake/: SodiumConfigure.cmake
cmake/: libsodiumConfig.cmake.in
